fix slide numbers not visible in pdf exports

--- a/css/print/pdf.scss
+++ b/css/print/pdf.scss
@@ -149,6 +149,7 @@ html.reveal-print {
 		display: block;
 		position: absolute;
 		font-size: 14px;
+		visibility: visible;
 	}
 
 	/* This accessibility tool is not useful in PDF and breaks it visually */
